syntax = "proto3";

package jiraya;

option go_package = "./protobuf";

message CreateUserRequest {
}

message CreateUserResponse {
  string message = 1;
}